<resources>
    <string name="app_name">NekoDiary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Neko Diary</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    Menus-->
    <string name="menu_home">Home</string>
    <string name="menu_task_list">Lista de Tareas</string>
    <string name="menu_battery">Batería</string>

    <!--    Buttons-->
    <string name="ok_option">OK</string>
    <string name="add_option">Agregar</string>
    <string name="cancel_option">Cancelar</string>
    <string name="clear_list_button">Limpiar Lista</string>

    <!--    Switch-->
    <string name="notification_switch_battery">Notificaciones 40 - 80 %</string>

    <!--    Dialog-->
    <string name="title_add_new_habit_dialog">NUEVO HÁBITO</string>
    <string name="description_add_new_habit_dialog">¿Deseas agregar un nuevo hábito a la lista actual de hábitos?</string>
    <string name="title_new_task_dialog">Agregar Nueva Tarea</string>
    <string name="title_radio_task_type_dialog">Tipo de tarea</string>

    <!--    Hints-->
    <string name="hint_title">Title</string>
    <string name="hint_description">Descripción</string>

    <!--    RadioButtons-->
    <string name="radio_usual">Hábito diario</string>
    <string name="radio_single">Tarea única</string>
    <string name="radio_long">Tarea repetitiva</string>

    <!--    Data Base-->
    <string name="db_version">Versión base de datos: %1$d</string>

    <!--    image description-->
    <string name="img_desc_habit_once">Hábito de una única vez</string>

    <!--    Popup menu item task-->
    <string name="edit_task_popup_menu">Editar</string>
    <string name="ready_task_popup_menu">Marcar como Realizado</string>
    <string name="failure_task_popup_menu">Marcar como No realizado</string>
    <string name="delete_task_popup_menu">Eliminar</string>

    <!--    Battery-->
    <string name="battery_percentage">PORCENTAJE: %1$.2f%%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>