<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/salmon_extra_light"
        app:cardCornerRadius="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="8dp"
                android:text="@string/title_new_task_dialog"
                android:textColor="@color/salmon_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/hint_title"
                android:textColorHint="@color/salmon_dark"
                app:boxStrokeColor="@color/salmon_dark"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:errorTextColor="@color/purple_500"
                app:hintTextColor="@color/salmon_dark"
                app:layout_constraintTop_toBottomOf="@id/title_header"
                tools:layout_editor_absoluteX="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@color/salmon_dark"
                    app:boxBackgroundColor="@color/salmon_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_description"
                android:textColorHint="@color/salmon_dark"
                app:boxStrokeColor="@color/salmon_dark"
                app:boxStrokeWidth="2dp"
                app:errorTextColor="@color/purple_500"
                app:hintTextColor="@color/salmon_dark"
                app:layout_constraintTop_toBottomOf="@id/title_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@color/salmon_dark"
                    app:boxBackgroundColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/radio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/title_radio_task_type_dialog"
                android:textColor="@color/salmon_dark"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_input_layout" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@id/radio_title"
                app:layout_constraintTop_toBottomOf="@id/radio_title">

                <RadioButton
                    android:id="@+id/usual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_usual_task_24"
                    android:drawablePadding="5dp"
                    android:text="@string/radio_usual"
                    android:textColor="@color/black"
                    app:drawableTint="@color/salmon_dark" />

                <RadioButton
                    android:id="@+id/single"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_single_task_24"
                    android:drawablePadding="5dp"
                    android:text="@string/radio_single"
                    android:textColor="@color/black"
                    app:drawableTint="@color/salmon_dark" />

                <RadioButton
                    android:id="@+id/long_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_long_task_24"
                    android:drawablePadding="5dp"
                    android:text="@string/radio_long"
                    android:textColor="@color/black"
                    app:drawableTint="@color/salmon_dark" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group">

                <ImageView
                    android:id="@+id/cancel_button"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="30dp"
                    android:src="@drawable/ic_cancel_circle_24"
                    app:tint="@color/teal_700" />

                <ImageView
                    android:id="@+id/confirm_button"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="30dp"
                    android:src="@drawable/ic_check_circle_24"
                    app:tint="@color/salmon_dark" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>